# taker-node

./: Cargo.toml  nodes.sh  rust-toolchain.toml
dockerfiles/: integrate.Dockerfile
node/common/: Cargo.toml
node/common/src/: rpc.rs  service.rs  tracing.rs
node/core/: Cargo.toml
node/core/src/: cli.rs  command.rs  main.rs
node/dev/: Cargo.toml
node/dev/src/: chain_spec.rs  rpc.rs  service.rs
node/mainnet/: Cargo.toml
node/mainnet/src/: chain_spec.rs  rpc.rs  service.rs  test_accounts.rs
node/testnet/: Cargo.toml
node/testnet/src/: chain_spec.rs  rpc.rs  service.rs  test_accounts.rs
pallets/asset-currency/: Cargo.toml
pallets/asset-currency/src/: impl_currency.rs  impl_fungible.rs  lib.rs  types.rs
pallets/precompiles/: AssetCurrency.sol  Cargo.toml  NativeCurrency.sol  Staking.sol
pallets/precompiles/src/: asset_currency.rs  lib.rs  native_currency.rs  staking.rs
pallets/precompiles/utils/: Cargo.toml
pallets/precompiles/utils/macro/: Cargo.toml
pallets/precompiles/utils/macro/src/: lib.rs
pallets/precompiles/utils/src/: data.rs  lib.rs
pallets/staking/: Cargo.toml
pallets/staking/reward-curve/: Cargo.toml
pallets/staking/reward-fn/: Cargo.toml
pallets/staking/runtime-api/: Cargo.toml
pallets/staking/runtime-api/src/: lib.rs
pallets/staking/src/: lib.rs  migrations.rs  mock.rs  slashing.rs  tests.rs
pallets/staking/src/pallet/: impls.rs  mod.rs
primitives/core/: Cargo.toml
primitives/core/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/constants/: Cargo.toml
runtime/common/constants/src/: lib.rs
runtime/common/src/: apis.rs
runtime/dev/: Cargo.toml
runtime/dev/constants/: Cargo.toml
runtime/dev/constants/src/: lib.rs
runtime/dev/src/: lib.rs  precompiles.rs
runtime/mainnet/: Cargo.toml
runtime/mainnet/constants/: Cargo.toml
runtime/mainnet/constants/src/: lib.rs
runtime/mainnet/src/: lib.rs  precompiles.rs
runtime/testnet/: Cargo.toml
runtime/testnet/constants/: Cargo.toml
runtime/testnet/constants/src/: lib.rs
runtime/testnet/src/: lib.rs  precompiles.rs
specs/: taker-mainnet.json  taker-testnet.json
