[package]
name = "taker-common-node"
version = "1.0.0"
description = "The common code shared between node specifications for taker Node"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# third-party dependencies
clap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
parity-scale-codec = { workspace = true }
jsonrpsee = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }

# substrate client dependencies
sc-client-api = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-chain-spec = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-service = { workspace = true }
sc-executor = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
pallet-staking-runtime-api = { workspace = true }
pallet-staking = { workspace = true }

# substrate primitives dependencies
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }

# Frontier dependencies
fc-db = { workspace = true }
fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }
fc-rpc-core = { workspace = true }
fp-rpc-debug = { workspace = true }
fp-storage = { workspace = true }
fp-rpc = { workspace = true }
fc-rpc-debug = { workspace = true }
fc-rpc-trace = { workspace = true }
fp-account = { workspace = true }

# Local Dependencies
bp-core = { workspace = true }

[features]
default = []
runtime-benchmarks = []
