[package]
name = "taker"
version = "0.1.0"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = 'taker-node'
path = "src/main.rs"

[dependencies]
# third-party dependencies
clap = { workspace = true }

# substrate client dependencies
sc-cli = { workspace = true }
sc-service = { workspace = true }
sc-consensus-grandpa = { workspace = true }

# benchmarking dependencies
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }

# taker runtimes
taker-dev-runtime = { workspace = true, features = ["std", "evm-tracing"] }
taker-testnet-runtime = { workspace = true, features = [
	"std",
	"evm-tracing",
] }
taker-mainnet-runtime = { workspace = true, features = [
	"std",
	"evm-tracing",
] }

# taker node specs
taker-common-node = { workspace = true }
taker-dev-node = { workspace = true }
taker-testnet-node = { workspace = true }
taker-mainnet-node = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = []
