[package]
authors.workspace = true
name = "pallet-asset-currency"
version = "0.1.0"
edition.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system.workspace = true
sp-std.workspace = true
scale-info = { workspace = true, features = ["derive", "serde", "decode"] }
sp-runtime.workspace = true
log = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    'frame-support/std',
    'frame-system/std',
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
	"scale-info/std",
	"log/std",
]
