[package]
name = "pallets-precompile"
authors.workspace = true
description = "A Precompile to make pallets accessible to pallet-evm"
edition.workspace = true
version = "1.0.0"

[dependencies]
pallet-asset-currency.workspace = true
pallet-staking.workspace = true
pallet-session.workspace = true
pallet-balances.workspace = true
pallet-evm.workspace = true
pallet-utility.workspace = true
frame-system.workspace = true
fp-evm.workspace = true
frame-support.workspace = true
sp-core.workspace = true
sp-std.workspace = true
sp-runtime = { workspace = true }
precompile-utils.workspace = true
num_enum.workspace = true
codec.workspace = true

[features]
default = [ "std" ]
std = [
    "pallet-asset-currency/std",
    "pallet-evm/std",
    "frame-system/std",
    "frame-support/std",
    "sp-core/std",
    "sp-std/std",
	"sp-runtime/std",
    "pallet-staking/std",
    "pallet-session/std",
    "precompile-utils/std",
    "pallet-balances/std",
    "pallet-utility/std",
	"codec/std",
]
