[package]
name = "pallet-staking"
version = "4.0.0-dev"
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.195", default-features = false, features = ["alloc", "derive"] }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", features = ["derive"] }
sp-std.workspace = true
sp-io.workspace = true
sp-runtime= { workspace = true }
sp-staking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-authorship .workspace = true
sp-application-crypto.workspace = true
frame-election-provider-support.workspace = true
log = { version = "0.4.17", default-features = false }
frame-benchmarking = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"serde/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
	"sp-staking/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "frame-election-provider-support/try-runtime"]
