[package]
name = "taker-common-runtime"
version = "1.0.0"
description = "The common code shared between substrate runtimes for taker Node"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
codec = { workspace = true }

# Substrate
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-consensus-babe = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-system/std",
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-consensus-babe/std",
	"codec/std",
]
try-runtime = [
	"frame-support/try-runtime",
]
